--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
 <h1>Hello World!</h1>
 <h2>Welcome to rosieilene.com. I'm proudly hosted with GitHub Pages and Jekyll.</h2>
-<p>Here you'll find hours of endless content, some of it NSFW. Pretty soon my twin site, malicealicemartin.com, will be up and running, too.
+<p>Here you'll find hours of endless content, some of it NSFW. Pretty soon my twin site, <a href="http://www.malicealicemartin.com/">malicealicemartin.com</a>, will be up and running, too.
 </body>
 </html>
