--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 <title>Rosie Ilene</title>
-  <link href="/style.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
 <h1>Hello World!</h1>
 <h2>Welcome to rosieilene.com. I'm proudly hosted with GitHub Pages and Jekyll.</h2>
+ <div>
 <p>Here you'll find hours of endless content, some of it NSFW. Pretty soon my twin site, <a href="http://www.malicealicemartin.com/">malicealicemartin.com</a>, will be up and running, too.
-</body>
+  </div>
+   </body>
 </html>
