--- a/index.html
+++ b/index.html
@@ -7,8 +7,24 @@
 <body>
 <h1>Hello World!</h1>
 <h2>Welcome to rosieilene.com. I'm proudly hosted with GitHub Pages and Jekyll.</h2>
+<div>
+  <h2>Who am I?</h2>
+   <p>I am a U.S. Army veteran who mostly stays quiet about her time in service, even when I'm asked. 
+    I was in for six years from 2005-2011 and served one tour in Iraq from 2008-2009. Am I proud of my service? 
+    No, not really. I'm proud to admit that didn't do anything noble or heroic, everything was mundane. We had/have 
+    more in common with the Iraq civilains than with the money-hungry warlords in power who sent us over to the desert 
+    in the first place. I've moved on from all the "hero" lies I was fed and now my focus is on the present and future.
+    Now, I'm an art and comic enthusiast, a loud-mouth, amateur coder, exercise freak, and <a href="www.instagram.com/rosieilene/">instagram<a/> freak.
+ </p>
+ </div>
+ 
+<div>
+ <h2>What will you find here?</h2>
+ <p>Do you have time to kill before you have to go off and do something important? Here you'll find endless content that'll 
+  keep you here for hours, stories, comics, blogs, pictures, and other mundanes things, some of it NSFW. Pretty soon my 
+  twin site, <a href="http://www.malicealicemartin.com/">malicealicemartin.com</a>, will be joining us, too.</p>
+ </div>
  <div>
-<p>Here you'll find hours of endless content, some of it NSFW. Pretty soon my twin site, <a href="http://www.malicealicemartin.com/">malicealicemartin.com</a>, will be up and running, too.
-  </div>
+  <h3>Thank you for stopping by! You better come back! You'll miss so much!</h3>
    </body>
 </html>
