--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     more in common with the Iraq civilains than with the money-hungry warlords in power who sent us over to the desert 
     in the first place. I've moved on from all the "hero" lies I was fed and now my focus is on the present and future.
     Now, I'm an art and comic enthusiast, a loud-mouth, amateur coder, exercise freak, and <a href="www.instagram.com/rosieilene/">instagram<a/> freak.
- </p>
+     </p>
  </div>
  
 <div>
@@ -26,5 +26,6 @@
  </div>
  <div>
   <h3>Thank you for stopping by! You better come back! You'll miss so much!</h3>
+  </div>
    </body>
 </html>
