--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Rosie Ilene</title>
+  <title>Rosie Ilene</title>
+    <link type="text/css" rel="stylesheet" href="/stylesheets/main.css"/>
 </head>
 
 <body>
