Correct the error

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     No, not really. I'm proud to admit that didn't do anything noble or heroic, everything was mundane. We had/have 
     more in common with the Iraq civilains than with the money-hungry warlords in power who sent us over to the desert 
     in the first place. I've moved on from all the "hero" lies I was fed and now my focus is on the present and future.
-    Now, I'm an art and comic enthusiast, a loud-mouth, amateur coder, exercise freak, and <a href="https://www.instagram.com/rosieilene/">instagram<a/> freak.
-     </p>
+    Now, I'm an art and comic enthusiast, a loud-mouth, amateur coder, exercise freak, and <a href="https://www.instagram.com/rosieilene/">instagram</a> freak.</p>
  </div>
  
 <div>
