--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
     I was in for six years from 2005-2011 and served one tour in Iraq from 2008-2009. Am I proud of my service? 
     No, not really. I'm proud to admit that didn't do anything noble or heroic, everything was mundane. We had/have 
     more in common with the Iraq civilains than with the money-hungry warlords in power who sent us over to the desert 
-    in the first place. I've moved on from all the "hero" lies I was fed and now my focus is on the present and future.
-    Now, I'm an art and comic enthusiast, a loud-mouth, amateur coder, exercise freak, and <a href="https://www.instagram.com/rosieilene/">instagram</a> freak.</p>
+    in the first place. Since moving on from all the "hero" lies I was fed but refused to eat and digest, I've been exploring
+    just about everything life has to offer as I still adjust to life back in the civilian world. This includes speaking out
+    against The United States being in Iraq in the first place. Hey, if I'm going to be tossed aside and ignored by the same 
+    war machine that used me as a nameless, faceless pawn, I may as well denounce loyalty to a system who was never loyal 
+    to its soldiers in the first place. Now, I'm coping with everything by being an art and comic enthusiast, a loud-mouth, 
+    amateur coder, exercise beast, and <a href="https://www.instagram.com/rosieilene/">instagram</a> freak.</p>
  </div>
  
 <div>
