--- a/index.html
+++ b/index.html
@@ -21,6 +21,22 @@
     to its soldiers in the first place. Now, I'm coping with everything by being an art and comic enthusiast, a loud-mouth, 
     amateur coder, exercise beast, and <a href="https://www.instagram.com/rosieilene/">instagram</a> freak.</p>
  </div>
+ <div>
+   <h3>Have you had any jobs?</h3>
+   <p>Yes. Like most of us, I did have the privilege to be born a trust fund baby or with a silver spoon in my mouth and 
+     if I was, I wouldn't be grateful for everything I have, including my parents who worked hard their whole lives to 
+     establish a good life in the United States and made sure their kids did, too. For jobs, I've been a shoe shine girl, 
+     call center rep, warehouse worker, dishwasher, a field worker, security guard and I packed pineapples one point in time.
+     I'm currently working on coding better and becoming a registered nurse, specializing in reproductive health.</p> 
+   <h3>Places I've been</h3>
+   <p><b>In the United States:</b> Texas, Arkansas, Oklahoma, Louisiana, Georgia, South Carolina, Florida, New Jersey, New Mexico,
+   and Missouri.
+     <b>Across the world:</b> Shannon Airport, Ireland, Leipzig, Germany, Kuwait, Al Fallujah, Tallil (Imam Ali) AFB, Nasrah, Nasiriyah, 
+     and Baghdad, Iraq.</p>
+   <h3>Places I would <i>like</i> to go</h3>
+    <p>Back to Germany, this time longer than 8 hours, Mexico with a trusted group of friends, Japan, Iceland, Hungary, 
+      and Alaska.</p>
+ </div>
  
 <div>
  <h2>What will you find here?</h2>
