--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 <h1>Hello World!</h1>
-<h2>Welcome to rosieilene.com. I'm proudly hosted with GitHub Pages and Jekyll.</h2>
+<h2>Welcome to rosieilene.com. It's so boring, it's exciting!</h2>
 <div>
   <h2>Who am I?</h2>
    <p>I am a U.S. Army veteran who mostly stays quiet about her time in service, even when I'm asked. 
@@ -34,8 +34,17 @@
      <b>Across the world:</b> Shannon Airport, Ireland, Leipzig, Germany, Kuwait, Al Fallujah, Tallil (Imam Ali) AFB, Nasrah, Nasiriyah, 
      and Baghdad, Iraq.</p>
    <h3>Places I would <i>like</i> to go</h3>
-    <p>Back to Germany, this time longer than 8 hours, Mexico with a trusted group of friends, Japan, Iceland, Hungary, 
+    <p>Back to Germany, this time longer than 8 hours, Iraq, too. Mexico with a trusted group of friends, Japan, Iceland, Hungary, 
       and Alaska.</p>
+   <h3>Favorite cuisines</h3>
+    <p>The food of my culture, MEXICAN!!! Central/South American dishes are also amazing. The same goes for Thai, Indian, Chinese, 
+      Japanese, and I wouldn't say no to trying new dishes, unless it has meat like beef and pork.</p>
+   <h3> Favorite foods</h3>
+   <p>Fruit, especially fruit cups doused in lime juice and <a href="https://en.wikipedia.org/wiki/Taj%C3%ADn_(seasoning)">tajin</a>, coconut paletas, the list will be shorter if I listed all
+     the foods I <i>don't</i> like.</p>
+   <h3> Least favorite foods</h3>
+    <p>Caramel, pork (yes, even bacon. I'm a monster, I know), most salad dressings except raspberry vinegrette, green apples, vodka,
+      tequila, American cheese, bland food, cow's milk.
  </div>
  
 <div>
