--- a/index.html
+++ b/index.html
@@ -22,8 +22,15 @@
     amateur coder, exercise beast, and <a href="https://www.instagram.com/rosieilene/">instagram</a> freak.</p>
  </div>
  <div>
+   <h2>OK, moving on to personal stats</h2>
+   <h4>Origin: United States</h4>
+   <h4>Languages: English and Spanish</h4>
+   <h4>Hair color: Brown</h4>
+   <h4>Eye color: Dark brown, sometimes they look black </h4>
+   <h4>Height: 165cm (5' 5")</h4>
+   <h4>Zodiac sign: Libra</h4>
    <h3>Have you had any jobs?</h3>
-   <p>Yes. Like most of us, I did have the privilege to be born a trust fund baby or with a silver spoon in my mouth and 
+   <p>Yes. Like most of us, I wasn't born a trust fund baby or with a silver spoon in my mouth and 
      if I was, I wouldn't be grateful for everything I have, including my parents who worked hard their whole lives to 
      establish a good life in the United States and made sure their kids did, too. For jobs, I've been a shoe shine girl, 
      call center rep, warehouse worker, dishwasher, a field worker, security guard and I packed pineapples one point in time.
