--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
      I'm currently working on coding better and becoming a registered nurse, specializing in reproductive health.</p> 
    <h3>Places I've been</h3>
    <p><b>In the United States:</b> Texas, Arkansas, Oklahoma, Louisiana, Georgia, South Carolina, Florida, New Jersey, New Mexico,
-   and Missouri.
-     <b>Across the world:</b> Shannon Airport, Ireland, Leipzig, Germany, Kuwait, Al Fallujah, Tallil (Imam Ali) AFB, Nasrah, Nasiriyah, 
+     and Missouri.</p>
+   <p><b>Across the world:</b> Shannon Airport, Ireland, Leipzig, Germany, Kuwait, Al Fallujah, Tallil (Imam Ali) AFB, Nasrah, Nasiriyah, 
      and Baghdad, Iraq.</p>
    <h3>Places I would <i>like</i> to go</h3>
     <p>Back to Germany, this time longer than 8 hours, Iraq, too. Mexico with a trusted group of friends, Japan, Iceland, Hungary, 
