Update pet peeve

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
    <h3> Least favorite foods</h3>
     <p>Caramel, pork (yes, even bacon. I'm a monster, I know), most salad dressings except raspberry vinegrette, green apples, vodka,
       tequila, American cheese, bland food, cow's milk.
+   <h3>Greatest pet peeve</h3>
+    <p>When someone asks me, "Are you new here?" or any variation of that question. In my experience, that has been a lowkey term used
+      by people looking to take advantage of you. They're testing out the waters to see if you can be played like a fool.
  </div>
  
 <div>
