--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Hello World!</h1>
 <h2>Welcome to rosieilene.com. It's so boring, it's exciting!</h2>
-<h3><a href="about-me.html">About Me</a></h3>
+<h3><a href="pages/about-me.html">About Me</a></h3>
 <div>
   <h2>Who am I?</h2>
    <p>I am a U.S. Army veteran who mostly stays quiet about her time in service, even when I'm asked. 
