--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link type="text/css" rel="stylesheet" href="stylesheets/main.css"/>
 </head>
 
-<body>
+<body id="page1">
 <h1>Hello World!</h1>
 <h2>Welcome to rosieilene.com. It's so boring, it's exciting!</h2>
 <h3><a href="pages/about-me.html">About Me</a></h3>
