add body id=page 2

--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -5,7 +5,7 @@
     <link type="text/css" rel="stylesheet" href="stylesheets/main.css"/>
 </head>
 
-<body>
+<body id="page2">
  <div>
    <h2>OK, moving on to personal stats</h2>
    <h4>Origin: United States</h4>
