--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <h1>Hello World!</h1>
 <h2>Welcome to rosieilene.com. It's so boring, it's exciting!</h2>
 <h3><a href="pages/about-me.html">About Me</a></h3>
+<h3><a href="pages/projects.html">Projects</a><h3>
+<h3><a href="pages/contact.html">Contact</a></h3>
 <div>
   <h2>Who am I?</h2>
    <p>I am a U.S. Army veteran who mostly stays quiet about her time in service, even when I'm asked. 
