--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Everything I've Got | Rosie Ilene</title>
+    <link type="text/css" rel="stylesheet" href="stylesheets/main.css"/>
+</head>
 
+<body id="page3">
+  <h1>Coming soon!</h1>
+  </body>
+  </html>
