--- a/pages/projects.html
+++ b/pages/projects.html
@@ -7,5 +7,6 @@
 
 <body id="page3">
   <h1>Coming soon!</h1>
+  <h5>Back to <a href="http://rosieilene.com/">home page.</a></h5>
   </body>
   </html>
