--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,7 +6,7 @@
 </head>
 
 <body id="page4">
-<h1>For now, feel free to shoot me a message on <a href="https://www.instagram.com/rosieilene/">Instagram</a></h1>
+<h1>For now, feel free to shoot me a message on <a href="https://www.instagram.com/rosieilene/">Instagram</a>.</h1>
   <h5>Back to <a href="http://rosieilene.com/">home page.</a></h5>
 </body>
 </html>
