--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>About Me | Rosie Ilene</title>
-    <link type="text/css" rel="stylesheet" href="stylesheets/main.css"/>
+    <link type="text/css" rel="stylesheet" href="stylesheets/about-me.css"/>
 </head>
 
 <body id="page2">
