--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
  <h2>What will you find here?</h2>
  <p>Do you have time to kill before you have to go off and do something important? Here you'll find endless content that'll 
   keep you here for hours, stories, comics, blogs, pictures, and other mundane things, some of it NSFW. Pretty soon my 
-  twin site, <a href="http://www.malicealicemartin.com/">malicealicemartin.com</a>, will be joining us, too.</p>
+  twin site, malicealicemartin.com, will be joining us, too.</p>
  </div>
  <div>
   <h3>Thank you for stopping by! You better come back! You'll miss so much!</h3>
