--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
 <body id="page1">
 <h1>Hello World!</h1>
-<h2>Welcome to rosieilene.com. It's so boring, it's exciting!</h2>
+<div class="MyDiv">
+  <h2>Welcome to rosieilene.com. It's so boring, it's exciting!</h2>
+</div>
   
 <div>
   <h2>Who am I?</h2>
