--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <link type="text/css" rel="stylesheet" href="stylesheets/main.css"/>
 </head>
 
-<body id="page1">
+<body>
 <h1>Hello World!</h1>
 <div class="MyDiv">
   <h2>Welcome to rosieilene.com. It's so boring, it's exciting!</h2>
 </div>
   
-<div>
+<div class="intro">
   <h2>Who am I?</h2>
    <p>I am a U.S. Army veteran who mostly stays quiet about her time in service, even when I'm asked. 
     I was in for six years from 2005-2011 and served one tour in Iraq from 2008-2009. Am I proud of my service? 
@@ -24,7 +24,7 @@
     to its soldiers in the first place. Now, I'm coping with everything by being an art and comic enthusiast, a loud-mouth, 
     amateur coder, exercise beast, and <a href="https://www.instagram.com/rosieilene/">instagram</a> freak.</p>
  </div>
- <div>
+ <div class="stats">
    <h2>OK, moving on to personal stats</h2>
    <h4>Origin: United States</h4>
    <h4>Languages: English and Spanish</h4>
@@ -32,6 +32,8 @@
    <h4>Eye color: Dark brown, sometimes they look black </h4>
    <h4>Height: 165cm (5' 5")</h4>
    <h4>Zodiac sign: Libra</h4>
+  </div>
+  <div>
    <h3>Have you had any jobs?</h3>
    <p>Yes. Like most of us, I wasn't born a trust fund baby or with a silver spoon in my mouth and 
      if I was, I wouldn't be grateful for everything I have, including my parents who worked hard their whole lives to 
