--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
  <div class="stats">
    <h2>OK, moving on to personal stats</h2>
    <h4>Origin: United States</h4>
+   <h4>Bloodline Origin: Mexico</h4>
    <h4>Languages: English and Spanish</h4>
    <h4>Hair color: Brown</h4>
    <h4>Eye color: Dark brown, sometimes they look black </h4>
