--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
     <p>When someone asks me, "Are you new here?" or any variation of that question. In my experience, that has been a lowkey term used
       by people looking to take advantage of you. They're testing out the waters to see if you can be played like a fool.
  </div>
-<div>
+<div class="question">
  <h2>What will you find here?</h2>
  <p>Do you have time to kill before you have to go off and do something important? Here you'll find endless content that'll 
   keep you here for hours, stories, comics, blogs, pictures, and other mundane things, some of it NSFW. Pretty soon my 
   twin site, malicealicemartin.com, will be joining us, too.</p>
  </div>
- <div>
+ <div class="end">
   <h3>Thank you for stopping by! You better come back! You'll miss so much!</h3>
   </div>
    </body>
