--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
  </div>
  <div class="stats">
    <h2>OK, moving on to personal stats</h2>
-   <img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/1483347445494.jpg?X-Amz-Date=20170103T003338Z&X-Amz-Expires=300&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Signature=cde69ffed13c55ce99f190662c130d370f94c73e08f9793b32054f344e92183c&X-Amz-Credential=ASIAJZRCHORWF4WWZZ3Q/20170103/us-east-1/s3/aws4_request&X-Amz-SignedHeaders=Host&x-amz-security-token=FQoDYXdzELH//////////wEaDN11kQ2MU79UUdz6XCL6AfacsVr0oZyb24%2BXWoZS4RZwy0E1sWndCWVzbw0mIWOCJWMdmxmbo%2Bu8dMQA2Tp6d26H3ewndxQbsfyzrlk477TU3BefKExduxUPa5MSzjeEhYBkXNrJ/NFHHyz/rvZk8yjd2mKielWA%2BbEutHPt7Kchg%2BBdwoZsOBLTc/20e3rPDKkPJb6fSc%2BxWCKaqMnLmt1KcIfBE%2BJT6VHYuXEmVsVJ3WgQk%2BFgjCeuVSxvh3CCGvINvMCaPc9mjwM6qwLegMgW3Ww40Knu6BcZwN1ap6ftoutUdEB6mpA5os/Yhpn80CWuc1f84GsAykx1wQB8FPZvVzIT0vPkx24o39KrwwU%3D"
+   <img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/1483347445494.jpg"
         width="300px" height="240px">
    <h4>Origin: United States</h4>
    <h4>Bloodline Origin: Mexico</h4>
