--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
 <div class="MyDiv">
   <h1>Hello World!</h1>
+  </div>
+<div class="mydiv2">
   <h2>Welcome to rosieilene.com. It's so boring, it's exciting!</h2>
 </div>
   
