--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Home | Rosie Ilene</title>
     <link type="text/css" rel="stylesheet" href="stylesheets/main.css"/>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
