--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Home | Rosie Ilene</title>
     <link type="text/css" rel="stylesheet" href="stylesheets/main.css"/>
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/82416.png" type="image/png">
 </head>
 
 <body>
