--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 
 <body>
 <div class="MyDiv">
-  <h1>Hello World!</h1>
+
   </div>
 <div class="mydiv2">
-  <h2>Welcome to rosieilene.com. It's so boring, it's exciting!</h2>
+  <h1>Welcome to rosieilene.com</h1>
+  <h2>It's so boring, it's exciting!</h2>
 </div>
   
 <div class="intro">
