--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     amateur coder, exercise beast, and <a href="https://www.instagram.com/rosieilene/">instagram</a> freak.</p>
  </div>
  <div class="stats">
-   <h2>OK, moving on to personal stats</h2>
+   <h2>Intimate Information</h2>
    <img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/1483347445494.jpg"
         width="720px" height="500px">
    <h4>Origin: United States</h4>
@@ -76,6 +76,13 @@
  </div>
  <div class="end">
   <h3>Thank you for stopping by! You better come back! You'll miss so much!</h3>
+  </div>
+  <div id= "footer">
+ <footer>
+  <p>Posted by: Rosie</p>
+   <p>Proudly made with ❤ with GitHub</p>
+  <!--<<p>Contact information: <a href="mailto:someone@example.com">someone@example.com</a>.</p>-->
+</footer>
   </div>
    </body>
 </html>
