Add personal email

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
  <footer>
   <p>Posted by: Rosie</p>
    <p>Proudly made with ❤ with GitHub</p>
-  <!--<<p>Contact information: <a href="mailto:someone@example.com">someone@example.com</a>.</p>-->
+  <p>Contact information: <a href="mailto:admin@rosieilene.com">admin@rosieilene.com</a>.</p>
 </footer>
   </div>
    </body>
