--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <div id= "footer">
  <footer>
   <p>Posted by: Rosie</p>
-   <p>Proudly made with ❤ with GitHub</p>
+   <p>Proudly made with ❤ on GitHub</p>
   <p>Contact information: <a href="mailto:admin@rosieilene.com">admin@rosieilene.com</a>.</p>
 </footer>
   </div>
