--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
   <h2>It's so boring, it's exciting!</h2>
 </div>
   <!--<div id="navigation">
-<nav><ul><li><strong>Home</strong></li><li><a href="about-me.html">About me</a></li><li><a href="blog.html">Blog</a></li><li><a href="comics.html">Comics</a></li> 
+<nav>
+  <ul>
+    <li><strong>Home</strong></li>
+    <li><a href="about-me.html">About me</a></li>
+    <li><a href="blog.html">Blog</a></li>
+    <li><a href="comics.html">Comics</a></li> 
 
 <li><a href="contact.html">Contact</a></li></ul></nav></div>
 </div>-->
