--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -7,13 +7,21 @@
 
 <body id="page2">
  <div>
-   <h2>OK, moving on to personal stats</h2>
+    <h1>I wanna get to know you a little better.</h1>
+  </div>
+ <div class="stats">
+   <h2>Intimate Information</h2>
+   <img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/1483347445494.jpg"
+        width="720px" height="500px">
    <h4>Origin: United States</h4>
+   <h4>Bloodline Origin: Mexico</h4>
    <h4>Languages: English and Spanish</h4>
    <h4>Hair color: Brown</h4>
    <h4>Eye color: Dark brown, sometimes they look black </h4>
    <h4>Height: 165cm (5' 5")</h4>
    <h4>Zodiac sign: Libra</h4>
+  </div>
+  <div>
    <h3>Have you had any jobs?</h3>
    <p>Yes. Like most of us, I wasn't born a trust fund baby or with a silver spoon in my mouth and 
      if I was, I wouldn't be grateful for everything I have, including my parents who worked hard their whole lives to 
@@ -41,6 +49,16 @@
     <p>When someone asks me, "Are you new here?" or any variation of that question. In my experience, that has been a lowkey term used
       by people looking to take advantage of you. They're testing out the waters to see if you can be played like a fool.
  </div>
+  
+ <div>
+  <h3>Thank you for stopping by! You better come back! You'll miss so much!</h3>
+  </div>
+  
+ <div>
+ <h5>Back to <a href="http://rosieilene.com/">home page.</a></h5>
+  </div>
+   </body>
+</html>
   
  <div>
   <h3>Thank you for stopping by! You better come back! You'll miss so much!</h3>
