--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -49,7 +49,8 @@
     <p>When someone asks me, "Are you new here?" or any variation of that question. In my experience, that has been a lowkey term used
       by people looking to take advantage of you. They're testing out the waters to see if you can be played like a fool.
  </div>
-  
+ 
+ <footer>
  <div>
   <h3>Thank you for stopping by! You better come back! You'll miss so much!</h3>
   </div>
@@ -57,15 +58,6 @@
  <div>
  <h5>Back to <a href="http://rosieilene.com/">home page.</a></h5>
   </div>
-   </body>
-</html>
-  
- <div>
-  <h3>Thank you for stopping by! You better come back! You'll miss so much!</h3>
-  </div>
-  
- <div>
- <h5>Back to <a href="http://rosieilene.com/">home page.</a></h5>
-  </div>
-   </body>
+   </footer>
+  </body> 
 </html>
