--- a/pages/comics.html
+++ b/pages/comics.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
+<html>
   <head>
   <title>Comics | Rosie Ilene</title>
+    <link type="text/css" rel="stylesheet" href="stylesheets/main.css"/>
+  <link rel="icon" href="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/82418.png" type="image/png">
   </head>
   
   <body>
