--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,6 +3,7 @@
 <head>
   <title>Where to Contact Me | Rosie Ilene</title>
     <link type="text/css" rel="stylesheet" href="stylesheets/main.css"/>
+  <link rel="icon" href="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/82418.png" type="image/png">
 </head>
 
 <body id="page4">
