--- a/index.html
+++ b/index.html
@@ -13,16 +13,13 @@
 <div class="mydiv2">
   <h2>It's so boring, it's exciting!</h2>
 </div>
+  
   <!--<div id="navigation">
 <nav>
-  <ul>
-    <li><strong>Home</strong></li>
-    <li><a href="about-me.html">About me</a></li>
-    <li><a href="blog.html">Blog</a></li>
-    <li><a href="comics.html">Comics</a></li> 
-
-<li><a href="contact.html">Contact</a></li></ul></nav></div>
+  <p> <strong>Home</strong> | <a href="about-me.html">About</a> | <a href="blog.html">Blog</a> | <a href="comics.html">Comics</a> | <a href="contact.html">Contact</a></p>
+</nav>
 </div>-->
+
   
 <div class="intro">
   <h2>Who am I?</h2>
