--- a/comics.html
+++ b/comics.html
@@ -1,1 +1,53 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Comics | Rosie Ilene</title>
+    <link type="text/css" rel="stylesheet" href="stylesheets/main.css"/>
+  <link rel="icon" href="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/favicon-32x32.png" type="image/png">
+<!--<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">-->
+</head>
+  
+<body>
+<div id="navigation">
+<nav>
+  <p> <a href="index.html">Home</a> | <a href="about-me.html">About me</a> <!--| <a href="blog.html">Blog</a>--> | <strong>Comics</strong> | <a href="contact.html">Contact</a></p>
+</nav>
+</div>
 
+<div class="question">
+ <h2>What will you find here?</h2>
+ <p>Do you have time to kill before you have to go off and do something important? Here you'll find endless content that'll 
+  keep you here for hours, stories, comics, blogs, pictures, and other mundane things, some of it NSFW.</p>
+ </div>
+  
+ <div class="end">
+  <h3>Thank you for reading my comics! Come back soon! You'll miss so much!<?h3>
+<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/1483394692368.jpg" width="720px" height="500px">
+  </div>
+
+<table>
+</table>
+
+</body>
+
+<footer>
+Everyhting created by Rosie Ilene on Github.
+</footer>
+
+</html>
