--- a/comics.html
+++ b/comics.html
@@ -39,6 +39,7 @@
  <div class="end">
   <h3>Thank you for reading my comics! Come back soon! You'll miss so much!<?h3>
 <img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/1483394692368.jpg" width="720px" height="500px">
+<p>Back to home page</p>
   </div>
 
 <table>
