--- a/about-me.html
+++ b/about-me.html
@@ -9,7 +9,7 @@
 <body>
 <div id="navigation">
 <nav>
-  <p> <a href="index.html">Home</a> | <strong>About me</strong> <!--| <a href="blog.html">Blog</a>--> | <a href="comics.html">Comics</a> | <a href="contact.html">Contact</a></p>
+  <p> <a href="index.html">Home</a> | <strong>About</strong> <!--| <a href="blog.html">Blog</a>--> | <a href="comics.html">Comics</a> | <a href="contact.html">Contact</a></p>
 </nav>
 </div>
 
