Add open new tab

--- a/contact.html
+++ b/contact.html
@@ -15,14 +15,15 @@
 
 <div>
 <h2>Contact information</h2>
-<p>Email me at: <a href="mailto:admin@rosieilene.com"<h2>>admin@rosieilene.com</a>.</p>
+<p>Email me at: <a href="mailto:admin@rosieilene.com" target="_blank">admin@rosieilene.com</a>.</p>
 <h2>Social Media</h2> 
-<p><a href="https://www.instagram.com/rosieilene/">instagram</a></p>
-<p><a href="https://twitter.com/ilene_rosie">Twitter</a></p>
+<p><a href="https://www.instagram.com/rosieilene/" target="_blank">instagram</a></p>
+<p><a href="https://twitter.com/ilene_rosie" target="_blank">Twitter</a></p>
 </div>
 </body>
 
 <footer>
+  <p>Back to <a href="index.html">home page</a></p>
 </footer>
 
 </html>
