--- a/comics.html
+++ b/comics.html
@@ -37,7 +37,7 @@
  </div>
   
  <table>
-   
+   <img scr="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/my-husband.jpg">
 </table>
 
  <div class="end">
