--- a/comics.html
+++ b/comics.html
@@ -31,14 +31,15 @@
 </div>
 
 <div class="question">
- <h2>What will you find here?</h2>
- <p>Do you have time to kill before you have to go off and do something important? Here you'll find endless content that'll 
-  keep you here for hours, stories, comics, blogs, pictures, and other mundane things, some of it NSFW.</p>
+ <p>Do you have some time to kill before you have to go off and do something important? Here, you'll find endless content that'll 
+  keep you here for hours. Tons of stories, comics, blogs, pictures, and other mundane things, some of it NSFW.</p>
  </div>
   
- <table>
-   <img scr="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/my-husband.jpg">
+<div id="thumbnails"> 
+  <table>
+   <img scr="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/my-husband.jpg" alt="#1: The husband" height="20%" width="20%">
 </table>
+  </div>
 
  <div class="end">
   <h3>Thank you for reading my comics! Come back soon! You'll miss so much!<?h3>
