--- a/comics.html
+++ b/comics.html
@@ -26,31 +26,49 @@
 <body>
 <div id="navigation">
 <nav>
-  <p> <a href="index.html">Home</a> | <a href="about-me.html">About me</a> <!--| <a href="blog.html">Blog</a>--> | <strong>Comics</strong> | <a href="contact.html">Contact</a></p>
+  <p> <a href="index.html">Home</a> | <a href="about-me.html">About</a> <!--| <a href="blog.html">Blog</a>--> | <strong>Comics</strong> | <a href="contact.html">Contact</a></p>
 </nav>
 </div>
 
 <div class="question">
- <p>Do you have some time to kill before you have to go off and do something important? Here, you'll find endless content that'll 
-  keep you here for hours. Tons of stories, comics, blogs, pictures, and other mundane things, some of it NSFW.</p>
+ <p>Do you have time to kill before you have to go off and do something important? Here you'll find endless content that'll 
+  keep you here for hours, stories, comics, blogs, pictures, and other mundane things, some of it NSFW. Just click each image to enlarge.</p>
  </div>
-  
-<div id="thumbnails"> 
-  <table>
-   <img scr="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/my-husband.jpg" alt="#1: The husband" height="20%" width="20%">
-</table>
-  </div>
+
+<div id="thumbnails">
+		<h3>#4: The Effective Plan</h3>
+		<p>January 9th, 2017</p>
+		<a href="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/la-la-land.png">
+		<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/little-la-la-land.png"></a>
+		
+		<h3>#3: The Homeless Bunch</h3>
+		<p>January 5th, 2017</p>
+		<a href="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/homeless-bunch.png"><img src="	
+https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/little-homeless-bunch.png"></a>
+		
+		<h3>#2: The Smile</h3>
+		<p>December 30th, 2016</p>
+		<a href="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/that-smile.jpg"><img src="	
+https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/that-little-smile.png"></a>
+		
+		<h3>#1: The Husband</h3> 
+		<p>December 27th, 2016</p>
+		<a href="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/my-husband.jpg">
+		<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/my-little-husband.png">
+		</a>
+</div>
 
  <div class="end">
-  <h3>Thank you for reading my comics! Come back soon! You'll miss so much!<?h3>
-<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/1483394692368.jpg" width="720px" height="500px">
-<p>Back to home page</p>
+  <h3>Thank you for reading my comics! Come back soon! You'll miss so much!</h3>
+<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/1483394692368.jpg" alt="Artist picture" width="500px" height="300px">
+<p><a href="index.html">Back to home page</a></p>
   </div>
+
 
 </body>
 
 <footer>
-Everyhting created by Rosie Ilene on Github.
+Everything created by Rosie Ilene on Github.
 </footer>
 
 </html>
