--- a/index.html
+++ b/index.html
@@ -14,76 +14,12 @@
   <h2>It's so boring, it's exciting!</h2>
 </div>
   
-  <!--<div id="navigation">
+  <div id="navigation">
 <nav>
-  <p> <strong>Home</strong> | <a href="about-me.html">About</a> | <a href="blog.html">Blog</a> | <a href="comics.html">Comics</a> | <a href="contact.html">Contact</a></p>
+  <p> <strong>Home</strong> | <a href="about-me.html">About</a> <!--| <a href="blog.html">Blog</a>-->| <a href="comics.html">Comics</a> | <a href="contact.html">Contact</a></p>
 </nav>
-</div>-->
+</div>
 
-  
-<div class="intro">
-  <h2>Who am I?</h2>
-   <p>I am a U.S. Army veteran who mostly stays quiet about her time in service, even when I'm asked. 
-    I was in for six years from 2005-2011 and served one tour in Iraq from 2008-2009. Am I proud of my service? 
-    No, not really. I'm proud to admit that didn't do anything noble or heroic, everything was mundane. We had/have 
-    more in common with the Iraq civilains than with the money-hungry warlords in power who sent us over to the desert 
-    in the first place. Since moving on from all the "hero" lies I was fed but refused to eat and digest, I've been exploring
-    just about everything life has to offer as I still adjust to life back in the civilian world. This includes speaking out
-    against The United States being in Iraq in the first place. Hey, if I'm going to be tossed aside and ignored by the same 
-    war machine that used me as a nameless, faceless pawn, I may as well denounce loyalty to a system who was never loyal 
-    to its soldiers in the first place. Now, I'm coping with everything by being an art and comic enthusiast, a loud-mouth, 
-    amateur coder, exercise beast, and <a href="https://www.instagram.com/rosieilene/">instagram</a> freak.</p>
- </div>
- <div class="stats">
-   <h2>Intimate Information</h2>
-   <img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/Profile-picture.jpg"
-        width="720px" height="500px">
-   <h4>Origin: United States</h4>
-   <h4>Bloodline Origin: Mexico</h4>
-   <h4>Languages: English and Spanish</h4>
-   <h4>Hair color: Brown</h4>
-   <h4>Eye color: Dark brown, sometimes they look black </h4>
-   <h4>Height: 165cm (5' 5")</h4>
-   <h4>Zodiac sign: Libra</h4>
-  </div>
-  <div>
-   <h3>Have you had any jobs?</h3>
-   <p>Yes. Like most of us, I wasn't born a trust fund baby or with a silver spoon in my mouth and 
-     if I was, I wouldn't be grateful for everything I have, including my parents who worked hard their whole lives to 
-     establish a good life in the United States and made sure their kids did, too. For jobs, I've been a shoe shine girl, 
-     call center rep, warehouse worker, dishwasher, a field worker, security guard and I packed pineapples one point in time.
-     I'm currently working on coding better and becoming a registered nurse, specializing in reproductive health.</p> 
-   <h3>Places I've been</h3>
-   <p><b>In the United States:</b> Texas, Arkansas, Oklahoma, Louisiana, Georgia, South Carolina, Florida, New Jersey, New Mexico,
-     and Missouri.</p>
-   <p><b>Across the world:</b> Shannon Airport, Ireland, Leipzig, Germany, Kuwait, Al Fallujah, Tallil (Imam Ali) AFB, Nasrah, Nasiriyah, 
-     and Baghdad, Iraq.</p>
-   <h3>Places I would <i>like</i> to go</h3>
-    <p>Back to Germany, this time longer than 8 hours, Iraq, too. Mexico with a trusted group of friends, Japan, Iceland, Hungary, 
-      and Alaska.</p>
-   <h3>Favorite cuisines</h3>
-    <p>The food of my culture, MEXICAN!!! Central/South American dishes are also amazing. The same goes for Thai, Indian, Chinese, 
-      Japanese, and I wouldn't say no to trying new dishes, unless it has meat like beef and pork.</p>
-   <h3> Favorite foods</h3>
-   <p>Fruit, especially fruit cups doused in lime juice and <a href="https://en.wikipedia.org/wiki/Taj%C3%ADn_(seasoning)">tajin</a>, coconut paletas, the list will be shorter if I listed all
-     the foods I <i>don't</i> like.</p>
-   <h3> Least favorite foods</h3>
-    <p>Caramel, pork (yes, even bacon. I'm a monster, I know), most salad dressings except raspberry vinegrette, green apples, vodka,
-      tequila, American cheese, bland food, cow's milk.
-   <h3>Greatest pet peeve</h3>
-    <p>When someone asks me, "Are you new here?" or any variation of that question. In my experience, that has been a lowkey term used
-      by people looking to take advantage of you. They're testing out the waters to see if you can be played like a fool.
- </div>
-<div class="question">
- <h2>What will you find here?</h2>
-  <img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/Artist-picture.jpg" width="720px" height="500px">
- <p>Do you have time to kill before you have to go off and do something important? Here you'll find endless content that'll 
-  keep you here for hours, stories, comics, blogs, pictures, and other mundane things, some of it NSFW. Pretty soon my 
-  twin site, malicealicemartin.com, will be joining us, too.</p>
- </div>
- <div class="end">
-  <h3>Thank you for stopping by! You better come back! You'll miss so much!</h3>
-  </div>
   <div id= "footer">
  <footer>
   <p>Posted by: Rosie</p>
