--- a/about-me.html
+++ b/about-me.html
@@ -15,8 +15,7 @@
 
  <div class="stats">
    <h2>Intimate Information</h2>
-   <img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/1483347445494.jpg"
-        width="720px" height="500px">
+   <img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/Profile-picture.jpg" alt="Profile Picture" width="720px" height="500px">
    <h4>Origin: United States</h4>
    <h4>Bloodline Origin: Mexico</h4>
    <h4>Languages: English and Spanish</h4>
@@ -25,7 +24,6 @@
    <h4>Height: 165cm (5' 5")</h4>
    <h4>Zodiac sign: Libra</h4>
   </div>
-  <div>
 
 <div class="intro">
   <h2>Who am I?</h2>
@@ -38,7 +36,7 @@
     against The United States being in Iraq in the first place. Hey, if I'm going to be tossed aside and ignored by the same 
     war machine that used me as a nameless, faceless pawn, I may as well denounce loyalty to a system who was never loyal 
     to its soldiers in the first place. Now, I'm coping with everything by being an art and comic enthusiast, a loud-mouth, 
-    amateur coder, exercise beast, and <a href="https://www.instagram.com/rosieilene/">instagram</a> freak.</p>
+    amateur coder, exercise beast, and <a href="https://www.instagram.com/rosieilene/" target="_blank">instagram</a> freak.</p>
 
    <h3>Have you had any jobs?</h3>
    <p>Yes. Like most of us, I wasn't born a trust fund baby or with a silver spoon in my mouth and 
@@ -58,16 +56,19 @@
     <p>The food of my culture, MEXICAN!!! Central/South American dishes are also amazing. The same goes for Thai, Indian, Chinese, 
       Japanese, and I wouldn't say no to trying new dishes, unless it has meat like beef and pork.</p>
    <h3> Favorite foods</h3>
-   <p>Fruit, especially fruit cups doused in lime juice and <a href="https://en.wikipedia.org/wiki/Taj%C3%ADn_(seasoning)">tajin</a>, coconut paletas, the list will be shorter if I listed all
+   <p>Fruit, especially fruit cups doused in lime juice and <a href="https://en.wikipedia.org/wiki/Taj%C3%ADn_(seasoning)" target="_blank">tajin</a>, coconut paletas, the list will be shorter if I listed all
      the foods I <i>don't</i> like.</p>
    <h3> Least favorite foods</h3>
     <p>Caramel, pork (yes, even bacon. I'm a monster, I know), most salad dressings except raspberry vinegrette, green apples, vodka,
-      tequila, American cheese, bland food, cow's milk.
+      tequila, American cheese, bland food, cow's milk.</p>
    <h3>Greatest pet peeve</h3>
     <p>When someone asks me, "Are you new here?" or any variation of that question. In my experience, that has been a lowkey term used
-      by people looking to take advantage of you. They're testing out the waters to see if you can be played like a fool.
+      by people looking to take advantage of you. They're testing out the waters to see if you can be played like a fool.</p>
  </div>
 
-<footer>
+<div class="footer2">
+ <footer>
+<p><a href="index.html">Back to home page</a></p>
 </footer>
+</div>
 </html>
