--- a/contact.html
+++ b/contact.html
@@ -9,21 +9,22 @@
 <body>
 <div id="navigation">
 <nav>
-  <p> <a href="index.html">Home</a> | <a href="about-me.html">About me</a> <!--| <a href="blog.html">Blog</a>--> | <a href="comics.html">Comics</a> | <strong>Contact</strong></p>
+  <p> <a href="index.html">Home</a> | <a href="about-me.html">About me</a> | <!--<a href="blog.html">Blog</a>--> | <a href="comics.html">Comics</a> | <strong>Contact</strong></p>
 </nav>
 </div>
 
-<div>
+<div class="contact">
 <h2>Contact information</h2>
 <p>Email me at: <a href="mailto:admin@rosieilene.com" target="_blank">admin@rosieilene.com</a>.</p>
 <h2>Social Media</h2> 
-<p><a href="https://www.instagram.com/rosieilene/" target="_blank">instagram</a></p>
+<p><a href="https://www.instagram.com/rosieilene/" target="_blank">Instagram</a></p>
 <p><a href="https://twitter.com/ilene_rosie" target="_blank">Twitter</a></p>
 </div>
-</body>
 
+<div class="footer5">
 <footer>
-  <p>Back to <a href="index.html">home page</a></p>
 </footer>
+</div>
 
+</body>
 </html>
