--- a/about-me.html
+++ b/about-me.html
@@ -65,7 +65,7 @@
     <p>When someone asks me, "Are you new here?" or any variation of that question. In my experience, that has been a lowkey term used
       by people looking to take advantage of you. They're testing out the waters to see if you can be played like a fool.</p>
  </div>
-
+  </body>
 <div class="footer2">
  <footer>
 <p><a href="index.html">Back to home page</a></p>
