--- a/contact.html
+++ b/contact.html
@@ -7,9 +7,12 @@
 </head>
 
 <body>
+<div class="MyDivOthers">
+</div>
+
 <div id="navigation">
 <nav>
-  <p> <a href="index.html">Home</a> | <a href="about-me.html">About me</a> | <!--<a href="blog.html">Blog</a>--> | <a href="comics.html">Comics</a> | <strong>Contact</strong></p>
+  <p> <a href="index.html">Home</a> | <a href="about-me.html">About me</a> <!--<a href="blog.html"> | Blog</a>-->| <a href="comics.html">Comics</a> | <strong>Contact</strong></p>
 </nav>
 </div>
 
