--- a/comics.html
+++ b/comics.html
@@ -24,6 +24,9 @@
 </head>
   
 <body>
+<div class="MyDivOthers">
+</div>
+
 <div id="navigation">
 <nav>
   <p> <a href="index.html">Home</a> | <a href="about-me.html">About</a> <!--| <a href="blog.html">Blog</a>--> | <strong>Comics</strong> | <a href="contact.html">Contact</a></p>
@@ -49,18 +52,26 @@ https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/little-ho
 		<h3>#2: The Smile</h3>
 		<p>December 30th, 2016</p>
 		<a href="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/that-smile.jpg"><img src="	
-https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/that-little-smile.png"></a>
+https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/that-little-smile.png"></a> <!--alt="Side-by-side comparison 
+of two selfies. The first selfie depicts a gorgeous woman smiling. The caption underneath her pic says (How I THINK 
+I look when I smile...) And the caption underneath the second selfie, with more wrinkles, smile lines, and squinty eyes, 
+says (How I REALLY look.)"-->
 		
 		<h3>#1: The Husband</h3> 
 		<p>December 27th, 2016</p>
 		<a href="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/my-husband.jpg">
-		<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/my-little-husband.png">
+		<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/my-little-husband.png"> 
+		<!--alt="One guy tries to make small talk with a coworker by asking her (Hey, how/'s your husband doing?). 
+		She reluctantly answers (I don/'t know, good. I guess.) After scratching the back of her head, she reaches 
+		out her hand and makes a suggestion. (Here, give me your phone) She says. The comic ends with the man saying 
+		(What are you doing?) as he looks over his coworker/'s shoulder. She types on his phone and says, 
+		(Calling him. So you can ask him yourself.)"-->
 		</a>
 </div>
 
  <div class="end">
   <h3>Thank you for reading my comics! Come back soon! You'll miss so much!</h3>
-<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/1483394692368.jpg" alt="Artist picture" width="500px" height="300px">
+<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/Artist-picture.jpg" alt="Artist picture" width="500px" height="350px">
 <p><a href="index.html">Back to home page</a></p>
   </div>
 
