--- a/about-me.html
+++ b/about-me.html
@@ -7,6 +7,9 @@
 </head>
 
 <body>
+<div class="MyDivOthers">
+</div>
+
 <div id="navigation">
 <nav>
   <p> <a href="index.html">Home</a> | <strong>About</strong> <!--| <a href="blog.html">Blog</a>--> | <a href="comics.html">Comics</a> | <a href="contact.html">Contact</a></p>
@@ -65,10 +68,12 @@
     <p>When someone asks me, "Are you new here?" or any variation of that question. In my experience, that has been a lowkey term used
       by people looking to take advantage of you. They're testing out the waters to see if you can be played like a fool.</p>
  </div>
-  </body>
+</body>
+
 <div class="footer2">
  <footer>
 <p><a href="index.html">Back to home page</a></p>
 </footer>
 </div>
+
 </html>
