--- a/index.html
+++ b/index.html
@@ -9,23 +9,24 @@
 <body>
 <div class="MyDiv">
   <h1>Welcome to rosieilene.com</h1>
-  </div>
+</div>
+
 <div class="mydiv2">
   <h2>It's so boring, it's exciting!</h2>
 </div>
-  
-  <div id="navigation">
+
+<div id="navigation">
 <nav>
-  <p> <strong>Home</strong> | <a href="about-me.html">About</a> <!--| <a href="blog.html">Blog</a>-->| <a href="comics.html">Comics</a> | <a href="contact.html">Contact</a></p>
+  <p> <strong>Home</strong> | <a href="about-me.html">About</a> <!--<a href="blog.html"> | Blog</a>-->| <a href="comics.html">Comics</a> | <a href="contact.html">Contact</a></p>
 </nav>
 </div>
+</body>  
 
   <div id= "footer">
  <footer>
   <p>Posted by: Rosie</p>
    <p>Proudly made with ❤ on GitHub</p>
-  <p>Contact information: <a href="mailto:admin@rosieilene.com">admin@rosieilene.com</a>.</p>
 </footer>
   </div>
-   </body>
+   
 </html>
