--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
 <div id="navigation">
 <nav>
-  <p> <a href="index.html">Home</a> | <a href="about-me.html">About</a> <!--<a href="blog.html"> | Blog</a>-->| <a href="comics.html">Comics</a> | <strong>Contact</strong></p>
+  <p> <a href="index.html">Home</a> | <a href="about-me.html">About</a> <!--<a href="blog.html"> | Blog</a>| <a href="comics.html">Comics</a>-->| <strong>Contact</strong></p>
 </nav>
 </div>
 
