--- a/about-me.html
+++ b/about-me.html
@@ -45,7 +45,7 @@
 <p>I absolutely love it! Starting in July 2015, I taught myself the basics of building a website using HTML/CSS, proofreading 
 my work on Notepad++ and the local host, and then launching it independently on Github and utilizing the command line. My sources
 for self-education are Codecademy, TechnicalCafe, Github, and w3schools. My ambition for learning more computer languages such
-as Python, RubyGems, PHP, JavaScript, and SQL is still ongoing as I ahve already begun familiarizing myself with PHP, a language
+as Python, RubyGems, PHP, JavaScript, and SQL is still ongoing as I have already begun familiarizing myself with PHP, a language
 used in making Facebook!</p>
 
 <h3>About Art</h3>
