--- a/comics.html
+++ b/comics.html
@@ -39,6 +39,11 @@
  </div>
 
 <div id="thumbnails">
+		<h3>#5 The Expectation</h3>
+		<p>January 12th, 2017</p>
+		<a href="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/the-expectation.png">
+		<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/the-little-expectation.png"></a>
+	
 		<h3>#4: The Effective Plan</h3>
 		<p>January 9th, 2017</p>
 		<a href="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/la-la-land.png">
