--- a/comics.html
+++ b/comics.html
@@ -39,38 +39,57 @@
  </div>
 
 <div id="thumbnails">
-		<h3>#5 The Expectation</h3>
+	
+		<h3>#6: Clash of the Titan Languages</h3>
+		<p>January 13th, 2016</p>
+		<a href="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/titan-languages.png">
+		<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/titan-little-languages.png" alt="As
+		The Main Character is ordering her food, a waiter politely requests to get through the tiny space between the cash
+		register and the fish tank on the other side. (Excusez-moi. Je dois aller à la cuisine, s'il vous plaît.), The 
+		waiter says politely. The Main Character flatens herself against the counter and gasps, (Ah, lo siento!) The cashier
+		chuckles as she participates as a spectator.">
+		</a>
+	
+		<h3>#5: The Expectation</h3>
 		<p>January 12th, 2017</p>
 		<a href="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/the-expectation.png">
-		<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/the-little-expectation.png"></a>
+		<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/the-little-expectation.png"
+		alt="The Main Character sits at the table and rants to Feliz (Isn't it funny how women are held to a higher 
+		standard, especially in the workplace? Yet we're given half the respect?) In the next panel she pounds her
+		fist on the table and shouts (It's like one slip-up and we're done, man!)"></a>
 	
 		<h3>#4: The Effective Plan</h3>
 		<p>January 9th, 2017</p>
 		<a href="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/la-la-land.png">
-		<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/little-la-la-land.png"></a>
+		<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/little-la-la-land.png"
+		alt="Large caption at the top of the image reads: (When I have to deal with rude-ass customers, but I can 
+		listen to music.) Under the caption is a drawing of The Main Character saying: (Half of me doesn't care what
+		you have to say. The other half? Is in la-la-land.)"></a>
 		
 		<h3>#3: The Homeless Bunch</h3>
 		<p>January 5th, 2017</p>
 		<a href="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/homeless-bunch.png"><img src="	
-https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/little-homeless-bunch.png"></a>
+https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/little-homeless-bunch.png" alt="The Main Character
+holds a ladybug on her finger as she walks by two homeless men. The man laying down on a bench shouts. (You, my dear, are
+awesome!) The Main Character retorts, ((My dear?) How about (Rosie)?)"></a>
 		
 		<h3>#2: The Smile</h3>
 		<p>December 30th, 2016</p>
 		<a href="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/that-smile.jpg"><img src="	
-https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/that-little-smile.png"></a> <!--alt="Side-by-side comparison 
+https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/that-little-smile.png" alt="Side-by-side comparison 
 of two selfies. The first selfie depicts a gorgeous woman smiling. The caption underneath her pic says (How I THINK 
-I look when I smile...) And the caption underneath the second selfie, with more wrinkles, smile lines, and squinty eyes, 
-says (How I REALLY look.)"-->
+I look when I smile...) And the caption underneath the second selfie of the same woman, this time she has more wrinkles, smile lines, and squinty eyes, 
+			says (How I REALLY look.)"></a>
 		
 		<h3>#1: The Husband</h3> 
 		<p>December 27th, 2016</p>
 		<a href="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/my-husband.jpg">
-		<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/my-little-husband.png"> 
-		<!--alt="One guy tries to make small talk with a coworker by asking her (Hey, how/'s your husband doing?). 
-		She reluctantly answers (I don/'t know, good. I guess.) After scratching the back of her head, she reaches 
+		<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/my-little-husband.png" 
+		alt="One guy tries to make small talk with a coworker by asking her (Hey, how/'s your husband doing?). 
+		She reluctantly answers (I don't know, good. I guess.) After scratching the back of her head, she reaches 
 		out her hand and makes a suggestion. (Here, give me your phone) She says. The comic ends with the man saying 
-		(What are you doing?) as he looks over his coworker/'s shoulder. She types on his phone and says, 
-		(Calling him. So you can ask him yourself.)"-->
+		(What are you doing?) as he looks over his coworker's shoulder. She types on his phone and says, 
+		(Calling him. So you can ask him yourself.)">
 		</a>
 </div>
 
