--- a/comics.html
+++ b/comics.html
@@ -26,6 +26,10 @@
 <body>
 <div class="MyDivOthers">
 </div>
+	
+<div class="mydiv2">
+  <h2>Enter a bizarre world of animated imagination.</h2>
+</div>
 
 <div id="navigation">
 <nav>
