--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,10 @@
 <body>
 <div class="MyDivOthers">
 </div>
+  
+  <div class="mydiv2">
+  <h2>Wanna contact me for any work? Or see me in action? Just click the links below!</h2>
+</div>
 
 <div id="navigation">
 <nav>
