--- a/about-me.html
+++ b/about-me.html
@@ -9,6 +9,11 @@
 <body>
 <div class="MyDivOthers">
 </div>
+	
+<div class="mydiv2">
+  <h2>I see you staring at me! Get to know the person running this site.</h2>
+</div>
+
 
 <div id="navigation">
 <nav>
