--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
  <footer>
   <p>Posted by: Rosie</p>
    <p>Proudly made with ❤ on GitHub</p>
+   <p>copyright pending</p>
 </footer>
   </div>
    
