--- a/comics.html
+++ b/comics.html
@@ -44,6 +44,13 @@
 
 <div id="thumbnails">
 	
+		<h3>#7: The Tightrope, part 1</h3>
+		<p>January 14th, 2017</p>
+		<a href="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/Tightrope.jpg">
+		<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/little-Tightrope.png" alt="
+		The Main Character struggles to balance on a tightrope above what appears to be a bottomless pit and comforts 
+		herself by saying (Thank God for holiday pay, it turned this financial sinkhole into a financial tightrope.)"></a>
+	
 		<h3>#6: Clash of the Titan Languages</h3>
 		<p>January 13th, 2016</p>
 		<a href="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/titan-languages.png">
