--- a/index.html
+++ b/index.html
@@ -17,16 +17,15 @@
 
 <div id="navigation">
 <nav>
-  <p> <strong>Home</strong> | <a href="about-me.html">About</a> | <a href="contact.html">Contact</a></p>
+  <p> <strong>Home</strong> | <a href="about-me.html">About</a> | <a href="blog.html">Blog</a> | <a href="comics.html">Comics</a> | <a href="contact.html">Contact</a></p>
 </nav>
 </div>
 </body>  
-
+<hr>
   <div id= "footer">
  <footer>
   <p>Posted by: Rosie</p>
    <p>Proudly made with ❤ on GitHub</p>
-   <p>copyright pending</p>
 </footer>
   </div>
    
