--- a/about-me.html
+++ b/about-me.html
@@ -9,18 +9,17 @@
 <body>
 <div class="MyDivOthers">
 </div>
-	
-<div class="mydiv2">
-  <h2>I see you staring at me! Get to know the person running this site.</h2>
-</div>
 
+<div class="mydiv2">
+  <h2>About the person running this site.</h2>
+</div>
 
 <div id="navigation">
 <nav>
-  <p> <a href="index.html">Home</a> | <strong>About</strong> | <a href="contact.html">Contact</a></p>
+  <p> <a href="index.html">Home</a> | <strong>About</strong> | <a href="blog.html">Blog</a> | <a href="comics.html">Comics</a> | <a href="contact.html">Contact</a></p>
 </nav>
 </div>
-
+<hr>
   <div class="stats">
    <h2>Intimate Information</h2>
    <img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/Profile-picture.jpg" alt="Profile Picture" width="720px" height="500px">
@@ -47,10 +46,10 @@
 <h3>"What would you like to know?"</h3>
    
 <h3>About coding</h3>
-<p>I absolutely love it! Starting in July 2015, I taught myself the basics of building a website using HTML/CSS, proofreading 
+<p>I absolutely love it! Starting in July 2015, I taught myself the basics of building a website using <abbr title="Hyper Text Markup Language">HTML</abbr>/<abbr= title="Cascading Style Sheets">CSS</abbr>, proofreading 
 my work on Notepad++ and the local host, and then launching it independently on Github and utilizing the command line. My sources
 for self-education are Codecademy, TechnicalCafe, Github, and w3schools. My ambition for learning more computer languages such
-as Python, RubyGems, PHP, JavaScript, and SQL is still ongoing as I have already begun familiarizing myself with PHP, a language
+as Python, RubyGems, <abbr title="Hypertext Preprocessor">PHP</abbr>, JavaScript, and <abbr title="Structured Query Language">SQL</abbr> is still ongoing as I have already begun familiarizing myself with PHP, a language
 used in making Facebook!</p>
 
 <h3>About Art</h3>
@@ -100,6 +99,4 @@ long as we're alive, there's never a chance to stop learning and improving.</p>
 <p><a href="index.html">Back to home page</a></p>
 </footer>
 </div>
-</html>
-
 </html>
