--- a/pages/first-entry.html
+++ b/pages/first-entry.html
@@ -2,7 +2,7 @@
 	<html>
 		<head>
 		<title>First Entry - Blog | Rosie Ilene</title>
-			<link type="text/css" rel="stylesheet" href="/stylesheets/pages.css"/>
+			<link type="text/css" rel="stylesheet" href="/stylesheets/main.css"/>
 			<link rel="icon" href="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/82418.png" type="image/png">
 		</head>
 		
@@ -16,6 +16,8 @@
 					a:link {text-decoration:none}
 				table, tr, th {padding:3px;}
 			</style>
+		<div class="MyDivOthers">	
+		</div>
 		<div class="pageDiv">
 			<h2 style=text-align:center>Blog</h2>
 		</div>
